[package]
name = "jcbench"
version = "2024.6.0"
edition = "2021"
publish = false

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[workspace]
members = [ 
	"crates/benchmark", 
	"crates/benchmark_settings", 
	"crates/benchmark_submission",
	"crates/cli", 
	"crates/cpuinfo"]

[dependencies]
cli = { path = "./crates/cli" }
