[package]
name = "benchmark_submission"
version = "0.1.0"
edition = "2021"

[dependencies]
benchmark_settings = { path = "../benchmark_settings" }
cpuinfo = { path = "../cpuinfo" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"